--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,13 @@ services:
 stages:
   - build
   - test
+  - publish
 
 # Log in to Gitlab's docker registry
 before_script:
   - export COMMIT_IMAGE=$( echo $CI_REGISTRY/$CI_PROJECT_PATH:$CI_COMMIT_SHA | tr '[:upper:]' '[:lower:]' )
   - export TAGGED_IMAGE=$( echo $CI_REGISTRY/$CI_PROJECT_PATH:$CI_COMMIT_TAG | tr '[:upper:]' '[:lower:]' )
+  - export GITHUB_URL=https://TheYorkshireDev:${GITHUB_TOKEN}@github.com/TheYorkshireDev/docker-bootstrap.git
   - docker info
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
@@ -30,3 +32,24 @@ test:
   script:
     - docker pull $COMMIT_IMAGE
     - docker run -i $COMMIT_IMAGE /bin/sh -c 'docker --version'
+
+# If the build has a tag, then use it it release a docker image
+publish:
+  stage: publish
+  script:
+    - docker pull $COMMIT_IMAGE
+    - docker tag $COMMIT_IMAGE $TAGGED_IMAGE
+    - docker push $TAGGED_IMAGE
+  only:
+    - tags
+
+# If the build has a tag we should update the github repo too.
+github_publish:
+  image: stevencooney/docker-git:latest
+  stage: publish
+  script:
+    - echo "Release to Github."
+    - git remote add github "$GITHUB_URL"
+    - git push github master --follow-tags
+  only:
+    - tags
